--- a/lib/client/autoform-tags-toggle.html
+++ b/lib/client/autoform-tags-toggle.html
@@ -1,4 +1,4 @@
-<template name="autoformTags">
+<template name="autoformTagsToggle">
 	<div data-schema-key="{{schemaKey}}">
 		{{#each tags}}
 			<span class="label {{#if selected}}label-primary js-selected{{else}}label-default{{/if}}" data-tag="{{value}}">{{label}}</span>
